# signlang-eyes

./: .clang-format  .gitignore  CMakeLists.txt  README.md
audio_frontend/: CMakeLists.txt  alsa_capture_device.cpp  alsa_capture_device.hpp  audio_format.hpp  audio_frame.hpp  audio_processor.cpp  audio_processor.hpp  audio_publisher.cpp  audio_publisher.hpp  main.cpp  program_options.cpp  program_options.hpp
conf/: conf.toml
env_sound_det/: CMakeLists.txt  audio_ring_buffer.cpp  audio_ring_buffer.hpp  env_sound_result.hpp  main.cpp  program_options.cpp  yamnet_model.cpp
handpose_det/: CMakeLists.txt  main.cpp  program_options.cpp  program_options.hpp
speech_asr/: CMakeLists.txt  main.cpp
src/audio_frontend/: CMakeLists.txt  README.md  alsa_capture_device.cpp  alsa_capture_device.hpp  audio_processor.hpp  audio_publisher.cpp  audio_publisher.hpp  audio_record_test.cpp  main.cpp  program_options.cpp  program_options.hpp  sound_source_blackboard.cpp  sound_source_localization.hpp
src/common/: audio_ring_buffer.cpp  audio_ring_buffer.hpp  logging.hpp  logging_cli.hpp  runtime.hpp
src/env_sound_det/: CMakeLists.txt  README.md  audio_ring_buffer.cpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp  yamnet_model.cpp  yamnet_model.hpp
src/handpose_det/: CMakeLists.txt  README.md  handpose_frame.hpp  handpose_model.cpp  handpose_model.hpp  handpose_selection.hpp  handpose_transport.cpp  handpose_transport.hpp  main.cpp  program_options.cpp  program_options.hpp
src/launcher/: CMakeLists.txt  README.md  main.cpp  program_options.cpp
src/signlang_det/: CMakeLists.txt  README.md  feature_extractor.cpp  feature_extractor.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  keypoint_ring_buffer.cpp  keypoint_ring_buffer.hpp  main.cpp  program_options.cpp  program_options.hpp  prototype_control.hpp  signlang_model.cpp  signlang_model.hpp  signlang_result.hpp
src/signlang_manager/: CMakeLists.txt  README.md  bluetooth_gatt_server.cpp  bluetooth_gatt_server.hpp  gesture_encoder.cpp  gesture_encoder.hpp  gesture_feature_extractor.cpp  gesture_feature_extractor.hpp  gesture_types.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  manager_service.cpp  manager_service.hpp  program_options.cpp  program_options.hpp  protocol.cpp  protocol.hpp  protocol_test.cpp  prototype_database.cpp  prototype_database.hpp  wire_handpose.cpp  wire_handpose.hpp
src/speech_asr/: CMakeLists.txt  README.md  audio_ring_buffer.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp  speech_asr_result.hpp  whisper_model.cpp  whisper_model.hpp
src/state_machine/: CMakeLists.txt  README.md  app_state.cpp  app_state.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp  state_control.cpp  state_control.hpp
src/video_frontend/: CMakeLists.txt  README.md  main.cpp  program_options.cpp  program_options.hpp  v4l2_capture_device.cpp  v4l2_capture_device.hpp  video_processor.cpp  video_processor.hpp  video_publisher.cpp  video_publisher.hpp  video_snapshot_test.cpp
video_frontend/: CMakeLists.txt  main.cpp  video_publisher.cpp  video_publisher.hpp
